src/pages/Stream/styles/EventTimeLineGraph.module.css
.graphContainer {
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    padding-top: 0;
    padding-bottom: 1rem;
    margin-left: -3.4rem;
}

.noDataContainer {
    width: 98%;
    height: 100%;
    align-items: center;
    justify-content: center;
    border: 1px dashed var(--mantine-color-gray-4);
}

.noDataText {
    text-align: center;
    color: var(--mantine-color-gray-6);
    font-size: var(--mantine-font-size-sm);
}

